--- a/app/views/admin/products/free_paragraph.html.erb
+++ b/app/views/admin/products/free_paragraph.html.erb
@@ -27,7 +27,7 @@
 
   <div class="button"> 
     <%= link_to image_tag("/images/admin/left.png")+"返回", admin_category_path(@product.category), class: "left" %>
-    <a href="javascript: document.getElementById('patchthisproduct').submit();" class="right highlight" data-no-turbolink = true >儲存<img src="<%= image_path("/images/admin/save.png") %>"></a>
+    <!--a href="javascript: document.getElementById('patchthisproduct').submit();" class="right highlight" data-no-turbolink = true >儲存<img src="<%= image_path("/images/admin/save.png") %>"></a-->
   </div>
 
 </article>
