--- a/app/views/admin/topics/index.html.erb
+++ b/app/views/admin/topics/index.html.erb
@@ -6,7 +6,7 @@
     <h3 class="left">主題列表</h3>
     <div class="button right">
       <%= link_to new_admin_topic_path(), class: "right highlight" do %>
-        建立基本主題<img src="/images/admin/add_folder.png">
+        建立主題<img src="/images/admin/add_folder.png">
       <% end %>
     </div>
   </div>
