--- a/public/css/admin/global.less
+++ b/public/css/admin/global.less
@@ -94,10 +94,10 @@ article select{border:1px solid @major-dark;padding:5px;width:100%;margin:5px 0;
 /*工具列*/
 .tool{text-align:right;opacity:0;filter:alpha(opacity=0);
 -webkit-transition:all .3s ease;-moz-transition:all .3s ease;}
-.tool a{display:inline-block;width:16px;height:16px;opacity:.5;filter:alpha(opacity=50);
+.tool a,.tool input{display:inline-block;width:16px;height:16px;opacity:.5;filter:alpha(opacity=50);
 background-position:0 0;background-repeat:no-repeat;cursor:pointer;margin:5px 0 0 10px;
 text-indent:-7777px}
-.tool a:hover{opacity:1;filter:alpha(opacity=100)}
+.tool a:hover,.tool input:hover{opacity:1;filter:alpha(opacity=100)}
 .tool .delete{background-image:url(../../images/admin/trash.png)}
 .tool .edit{background-image:url(../../images/admin/edit.png)}
 .tool .save{background-image:url(../../images/admin/save.png)}
