--- a/app/views/admin/topics/edit.html.erb
+++ b/app/views/admin/topics/edit.html.erb
@@ -15,39 +15,26 @@
         <%= form_for(@topic, :url => admin_topic_path(@topic), html: { id: "patchthistopic" , :multipart => true} ) do |f| %>
           <table width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
-              <td width="7%">主題名稱：</td>
+              <td width="7%">名稱：</td>
               <td width="93%">
                <%= f.text_field :name, class: 'text' %>
-            </tr>
-            <tr>
-              <td>&nbsp;</td>
-              <td width="93%">
-              <% if @gallery_count > 0 %>
-                  <%= render 'admin/common/show_by_type', target: @topic, target_title: '縮圖', type: 'TopicCoverGallery', allow_dragable: false %>
-               <% else %>
-                 <%= render 'admin/common/upload_by_type', target_title: '縮圖' %>
-               <% end %>
-               </td>
             </tr>
           </table>
         <% end %>
         </div>
-      
-
-      <div class="button">
-        <a href="javascript: document.getElementById('patchthistopic').submit();" id="sendtheform" class="right highlight" data-no-turbolink = true >變更
-          <img src="<%= image_path("/images/admin/up.png") %>">
-        </a>
-      </div>
-
-    </article>  
-
-    <article>
+        <div class="form">
+          <% if @gallery_count > 0 %>
+                  <%= render 'admin/common/show_by_type', target: @topic, target_title: '縮圖', type: 'TopicCoverGallery', allow_dragable: false %>
+               <% else %>
+                 <%= render 'admin/common/upload_by_type', target_title: '縮圖' %>
+               <% end %>
+        </div>
+    <div class="form">
       <%= form_for(@topic_productship, :url => admin_topic_productships_path(), html: { id: "newthistopic_productship" } ) do |f| %>
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td width="7%">商品：</td>
-            <td width="31%">
+            <td width="92%">
             <% unless @products.count == 0 %>
               <%= f.select :product_id, options_for_select(@products.collect { |product|
         [product.name, product.id] }, @topic_productship.product_id), {}, { id: 'product_select' } %>
@@ -55,33 +42,26 @@
               無商品可供選擇
             <% end %>
             </td>
-            <td width="2%">&nbsp;</td>
-            <td width="7%">&nbsp;</td>
-            <td width="53%"><%= f.hidden_field :topic_id, value: @topic.id %></td>
-          </tr>
-          <tr>
-            <td valign="top">&nbsp;</td>
-            <td colspan="4">&nbsp;</td>
+            <td width="1%"><%= f.hidden_field :topic_id, value: @topic.id %></td>
           </tr>
         </table>
       <% end %>
-
+      </div>
       <div class="button">
-        <a href="javascript: document.getElementById('newthistopic_productship').submit();" id='new_topic_productship' class="right highlight" data-no-turbolink = true >加入商品
+        <a href="javascript: document.getElementById('newthistopic_productship').submit();" id='new_topic_productship' class="right highlight" data-no-turbolink = true >加入
           <img src="<%= image_path("/images/admin/down.png") %>">
         </a>
       </div>
 
       <div class="list">
-        <table width="100%" border="0" cellspacing="0" cellpadding="0">
-          
+        <table width="100%" border="0" cellspacing="0" cellpadding="0">          
           
           <% @topic.topic_productships.each do |topic_productship| %>
             <% current_product = topic_productship.product %>
             <% if current_product %>
               <tr>
-                <td width="18%"><%= current_product.product_no %></td>
-                <td width="64%"><%= link_to current_product.name, category_product_path(current_product.category, current_product) %></td>
+                <!--td width="18%"><%= current_product.product_no %></td-->
+                <td width="82%"><%= link_to current_product.name, category_product_path(current_product.category, current_product) %></td>
                 <td width="18%">
                   <div class="tool"> 
                     <%= link_to '', admin_topic_productship_path(topic_productship), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete', title: '刪除' %>
@@ -96,5 +76,9 @@
 
       <div class="button">
         <%= link_to image_tag("/images/admin/left.png")+"返回", admin_topics_path(), class: "left" %>
+        <a href="javascript: document.getElementById('patchthistopic').submit();" id="sendtheform" class="right highlight" data-no-turbolink = true >儲存 <img src="<%= image_path("/images/admin/save.png") %>">
+        </a>
       </div>
-    </article>
+
+    </article>  
+
