上傳尺寸說明

--- a/app/views/admin/products/photo.html.erb
+++ b/app/views/admin/products/photo.html.erb
@@ -8,7 +8,7 @@
     <%= link_to "內容", admin_category_product_free_paragraph_path(@product.category, @product) %>
     <%= link_to "庫存", admin_category_product_stocks_path(@product.category, @product)%>
   </nav>
-  <div class="explain right"><p>圖片尺寸：1250px * 1250px</p></div>
+  <div class="explain right"><p>圖片尺寸：560 * 560 以上正方形照片</p></div>
 </header>
 
 <article>
