--- a/public/css/admin/global.less
+++ b/public/css/admin/global.less
@@ -295,3 +295,11 @@ border-radius:0 15px 0 15px}
 
 .tag-text{width:100%;box-shadow:none!important;}
 .tag-text ul{border:1px solid @major-dark!important;box-shadow:none!important;background:none!important}
+
+/*-----------------------------------------------------------------------排序---*/
+
+.lookbook-layout div{}
+.lookbook-layout table{background:@major!important;}
+.lookbook-layout td{border:1px dashed #999;padding:15px;background:@major-deep}
+.lookbook-layout img{max-width:330px;height:auto}
+#lookbook-layout-1 img{max-width:675px}
