--- a/app/views/announcements/index.html.erb
+++ b/app/views/announcements/index.html.erb
@@ -15,7 +15,7 @@
           </div>
         </header><!-- End .content-title -->
         
-        <div class="col-md-9 col-sm-8 col-xs-12 articles-container"><!-- Start 內文 -->         
+        <div class="col-md-9 articles-container"><!-- Start 內文 -->         
             
             <% @announcements.each do |announcement| %>
               <article class="article"><!-- Start .article -->
