--- a/app/views/useradmin/orders/index.html.erb
+++ b/app/views/useradmin/orders/index.html.erb
@@ -77,3 +77,8 @@
   
 </div>
 <!-- End .lookbook --> 
+<script>
+$(function(){
+  $('#orderList tr:odd').css({'background-color':'#EEE'});
+});
+</script>
