--- a/app/views/cart/_show_order_items.html.erb
+++ b/app/views/cart/_show_order_items.html.erb
@@ -1,12 +1,12 @@
 
 <% order_items.each do |item| %>
   <tr>
-    <td>
+    <td><figure>
       <% unless item[:product_id].nil? || item[:product_id].empty? %>
         <% if Product.find_by_id(item[:product_id]).galleries.select{ |v| v['type'] == "ProductCoverGallery" }.count > 0 %>
           <%= image_tag Product.find_by_id(item[:product_id]).galleries.select{ |v| v['type'] == "ProductCoverGallery" }.first.attachment.url, width: 100, height: 100 %>
         <% end %>
-      <% end %>
+      <% end %></figure>
       <p>NO. <%= item[:product_no] %><br> 
       <%= generate_product_link(item) %><br> 
       <%= item[:en_name] %><br> 
