--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,12 +4,11 @@
 #wrapper { position: relative }
 .bottom { right:auto;left:16%; }
 .bgBottom.index { background-image: url(../images/bg_footer2.png); height: 169px; width: 284px; }
-.bgBottom { position: absolute; bottom: 0px; left: -100px; bottom: 27px\0; }
+.bgBottom { position: absolute; bottom: 0px; left: -100px; }
 #bannerFrame { position: absolute; left: 0; top: 0;z-index: 600;}
- @media (min-width: 768px) and (max-width: 1200px) {
+@media (min-width: 768px) and (max-width: 1200px) {
 .title.lookbook { width: 20%; min-width: 320px; }
 .title.pickup { width: 20%; min-width: 280px; }
-.bgBottom { bottom: 10px\0; }
 }
 @media (max-width: 767px) {
 .title.lookbook { width: 260px; }
@@ -35,16 +34,16 @@
 .category-item-container .item:hover { background-image: url(../images/slider.gif); }
 #favoritesBg .container { position: relative; margin: 0; padding: 0; width: 100%; z-index: 0; }
 .bgFav { background-color: #c9006e; position: absolute; height: 265px; width: 100%; left: 0px; top: 85px; }
-#content .item > .item-image-container figure img { max-width: 230px; width: 100%; display: block; height: auto; max-height: 230px; }
+
 .col-xs-12 { display: inline-block; }
 /*貼紙*/
 .new-rect { background: url(../images/idx-03.png); width: 69px; height: 38px; color: #333; padding-right: 5px; left: -3px; font-size: 1.2em; }
 .item-price-container { background: url(../images/idx-04.gif); }
 .item-image-container .item-price-container { font: 100 1.3em Helvetica, Microsoft JhengHei, "微軟正黑體"; width: 85px; height: 85px; }
-.item-image-container .item-price-container .item-price { margin-top: 0px; font-size: 1.1em;line-height:85px; }
+.item-image-container .item-price-container .item-price { margin-top: 0px; font-size: 1.1em;line-height:85px;}
 /*圖片*/
-.item-image-container figure img { /* [disabled]max-height:225px!important;
-*/ }
+#content .item > .item-image-container figure img { width: 100%; height: auto;}
+#content .item > .item-image-container figure { overflow:hidden;max-width: 230px;max-height: 230px;display: block;  }
 /*文字*/
 .item-name { white-space: nowrap;overflow: hidden;text-overflow: ellipsis;padding-top: 20px; }
 .item-name a { font: 100 0.9em Helvetica, Microsoft JhengHei, "微軟正黑體"!important; margin: 0 0 5px 0; }
