--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -79,7 +79,7 @@ body, html { overflow-x: hidden; color: #434343; }
 .menu > li:hover { background: url(../images/nav.gif) center bottom no-repeat }
 #main-nav-container #main-nav .menu > li { font-size: 0.8em; line-height: 1.5em; height: 69px; }
 h1.logo { margin-top: 10px; margin-bottom: 15px; }
-#quick-access .quick-search-form .btn-custom {background-color: #646464;background-position: 0 -116px;}
+#quick-access .quick-search-form .btn-custom {background-color: #646464!important;background-position: 0 -116px!important;}
 #quick-access { margin-top: 17px }
 #main-nav-container #quick-access .form-group { display: block; }
 #main-nav-container.fixed h1.logo { margin-top: 10px }
@@ -89,7 +89,6 @@ h1.logo { margin-top: 10px; margin-bottom: 15px; }
 #main-nav-container #main-nav .menu li:nth-child(2) > .mega-menu .col-5{ width: 50%; }
 .menuTitle{font-size:1.3em;padding:20px 0;display:block;text-align:left;}
 .col-5{padding-bottom:20px;}
-#main-nav-container #main-nav .menu li ul{top:65px\0;}
 @media (min-width: 992px) and (max-width: 1199px) {
 #main-nav { padding-right: 160px; }
 #main-nav-container .container { width: 100%; }
@@ -169,11 +168,9 @@ h3.title span { font-size: 20px; padding: 0; margin-top: 5px; }
 .related-slider .related-product figure{height:100px;overflow: hidden;}
 .related-slider .related-product img{width:100px;}
 .panel-body li.active, .sidebar .widget .panel.active .accordion-header{background-color: #fff799;}
-@media \0screen {
-.item > .item-image-container .item-price-container .item-price { padding-top: 15px;line-height:0px;  }
-}
+
 @media (min-width: 768px) and (max-width: 1200px) {
-#content .container { width: 90%; width:100%\9;}
+#content .container { width: 90%; }
 }
 @media (max-width: 767px) {
 .row { margin-left: -15px; margin-right: -15px; }
@@ -231,30 +228,30 @@ textarea.form-control { resize: none; }
 #footer a:hover { color: #FFF!important; }
 #footer-bottom { background: #000!important; padding-bottom: 0; }
 #footer-bottom .container { background-image: url(../images/bg_footer.jpg); position: relative; background-position: center bottom; background-repeat: no-repeat; hieght: 100px!important; padding-bottom: 25px; margin-bottom: 0; }
-.footer-text-container p:after { content: "　© 2014 Copyright by LadyBoo.";display:block\0;float:right\0; }
+.footer-text-container p:after { content: "　© 2014 Copyright by LadyBoo."; }
 .footer-text-container { color: #b3b3b3; position: relative; }
 .footer-text-container a { font-size: 1em!important; margin: 0 0 0 20px }
 .footer-social-links-container a { color: #fff!important; display: block; width: 200px; position: relative; padding-left: 40px; background-image: url(../images/fb.gif); background-repeat: no-repeat; background-position: left top; position: absolute; top: -15px; left: 40px; margin: 0 8% 0 0; font-size: 1em!important; height: 50px; padding-top: 35px; }
 .footer-social-links-container {width:200px;}
 .footer-text-container{width:70%;float:right;}
 #footer a { color: #b3b3b3; }
-#footer .fb-share-button { position: absolute; right: -100px;position: static\0;margin:50px 0 0 25px\0;  bottom: -32px; }
+#footer .fb-share-button { position: absolute; right: -100px;  bottom: -32px; }
 @media (min-width: 768px) and (max-width: 1200px) {
-.footer-text-container p:after { display: block;display:block\0;float:right\0; }
+.footer-text-container p:after { display: block; }
 .footer-text-container{padding-right: 60px!important;}
 #scroll-top { bottom: 80px; }
 #footer .container {width: 100%;}
-#footer .fb-share-button { right: 100px\0; }
+
 }
 @media (max-width: 830px) {
 #footer .fb-share-button { top:50px;left:40px;right:auto;}
 }
-@media (max-width: 767px) {.footer-text-container p:after { display:block\0;float:right\0; }
+@media (max-width: 767px) {
 #footer .fb-share-button { top:50px;left:15px;right:auto; }
 #footer .col-xs-12{display:block;}
 .footer-text-container{width:auto;padding-top: 80px;float:none;clear: both;;}
 .footer-text-container a{margin:0;width:auto;display:block;padding-bottom: 5px;}
-.footer-text-container p:after { content: "© 2014 Copyright by LadyBoo."; display:block;float:none\0;}
+.footer-text-container p:after { content: "© 2014 Copyright by LadyBoo."; display:block;}
 #footer-bottom p { margin: 20px 0 6px 0; text-align: left; }
 .footer-social-links-container a img { top: -26px }
 .footer-text-container { position: relative;float: none; }
