--- a/public/css/pageSearch.css
+++ b/public/css/pageSearch.css
@@ -1,17 +1,17 @@
 .main-content { width: 100%; padding: 0; }
-#content .col-md-4 { width: 25%; }
+#content .col-md-4 { width: 275px;}
 .title.search { width: 240px; }
 #content p { font-size: 1.2em; line-height: 1.5em; }
 .title.favorites { width: 340px; }
  @media (min-width: 992px) and (max-width: 1200px) {
-#content .col-md-4 { width: 33.0%; }
+#content .col-md-4 { width: 275px;}
 .item .item-image-container { width: 96%; }
 #content .container { width: 100%; }
 #content .col-sm-6, #content .col-xs-12 { float: none; }
 }
 @media (min-width: 768px) and (max-width: 991px) {
 .item > .item-image-container { width: 96%; }
-#content .col-md-4 { width: 50%; }
+#content .col-md-4 { width: 275px; }
 .title.search { width: 16%; min-width: 220px; }
 .title.favorites { width: 20%; min-width: 320px; }
 #content .container { width: 100%; }
@@ -22,7 +22,7 @@
 .title.search { width: 280px; }
 #content .col-md-6.col-sm-12.col-xs-12.product { width: 100%; }
 #content .col-sm-6, #content .col-xs-12 { float: none; }
-#content .col-md-4 { width: 100%; }
+#content .col-md-4 { width: 275px; }
 .title.favorites { width: 280px; }
 .item > .item-image-container .item-price-container .item-price { font-size: 1.3em; margin-top: 0px; }
 #content .container { padding: 0 10px; }
